[package]
name = "snippet-interactive-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = { version = "0.10.0", optional = true }
snippet-body = { git = "https://github.com/ZakharEl/snippet-body.git", version = "*" }

[features]
shell-code = ["snippet-body/code", "dep:run_script"]
choice = []
